[project]
name = "mov_egg"
version = "0.2.1"
description = "Default template for PDM package"
authors = [
    {name = "WhiteCapella", email = "whitecapella@naver.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
